--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.15.3",
     "@astrojs/check": "^0.9.3",
+    "astro": "^4.15.3",
+    "astro-aws-amplify": "^0.1.0",
+    "dotenv": "^16.4.5",
     "typescript": "^5.5.4"
   }
 }
